// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectionsList when there are no references should render a blank state message 1`] = `
<div
  className="blank-state"
>
  <Icon
    icon="sitemap"
  />
  <h4>
    <Translate
      context="System"
    >
      No Connections
    </Translate>
  </h4>
  <p>
    <Translate
      context="System"
    >
      No Connections description
    </Translate>
  </p>
</div>
`;

exports[`ConnectionsList when there are no references should render a blank state message 2`] = `
<div
  className="blank-state"
>
  <Icon
    icon="sitemap"
  />
  <h4>
    <Translate
      context="System"
    >
      No References
    </Translate>
  </h4>
  <p>
    <Translate
      context="System"
    >
      No References description
    </Translate>
  </p>
</div>
`;
